--- a/src/app/sale/sale.component.html
+++ b/src/app/sale/sale.component.html
@@ -21,7 +21,7 @@
   </mat-expansion-panel>
  
   <mat-card-actions>
-    <button mat-button>Confirm</button>
+    <button mat-raised-button color="accent">Confirm</button>
   </mat-card-actions>
 </mat-card>
 </div>
@@ -34,7 +34,7 @@
     <mat-radio-group>
         <mat-radio-button value="1">แบบเป็นเอกสาร</mat-radio-button>
         <mat-radio-button value="2">แบบเป็นไพล์
-          <button mat-button (click)="inputFile.click()">Import file</button> {{ inputFile.value }}
+          <button mat-raised-button color="primary" (click)="inputFile.click()">Import file</button> {{ inputFile.value }}
           <input #inputFile type="file" [style.display]="'none'">
   </mat-radio-button>
   </mat-radio-group>
@@ -47,7 +47,7 @@
       </p>
     </mat-card-content> -->
     <mat-card-actions>
-      <button mat-button>Confirm</button>
+      <button mat-raised-button color="accent">Confirm</button>
     </mat-card-actions>
   </mat-card>
 </div>
@@ -82,7 +82,17 @@
     </mat-card-content>
   </mat-card>
 </div>
+<mat-form-field>
+    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
 </mat-card>
+<mat-card-actions>
+    <button mat-raised-button color="warn" (click)="openDialog()">Confirm</button>
+  </mat-card-actions>
+
+
 
 <!-- <mat-card>
   <mat-form-field>
