--- a/src/app/pmcontrol/pmcontrol-dialog.component.html
+++ b/src/app/pmcontrol/pmcontrol-dialog.component.html
@@ -1,3 +1,18 @@
 <mat-card-actions>
-        Test
+  <form class="example-form">
+  
+
+    <mat-form-field class="example-full-width">
+      <textarea matInput placeholder="Material"></textarea>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <textarea matInput placeholder="Amount"></textarea>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <textarea matInput placeholder="Use day"></textarea>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <textarea matInput placeholder="Note"></textarea>
+    </mat-form-field>
+  </form>
       </mat-card-actions>
