--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-
-<app-manager>   </app-manager>
-
+<!-- <app-plan4></app-plan4> -->
+<app-sale2>   </app-sale2>
+<!-- <app-sale></app-sale> -->
+<!-- <app-sale2></app-sale2> -->
+<!-- <app-stepsale></app-stepsale> -->
 
