--- a/src/app/stepsale/stepsale.component.css
+++ b/src/app/stepsale/stepsale.component.css
@@ -25,9 +25,9 @@
   }
 /* ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ stepsale ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
   .big-card {
-    max-width: 1000px;
+    max-width: 700px;
     display: flex;
-    
+    margin: auto;
     /* text-align: center; */
     /* flex-wrap: wrap; */
     /* justify-content: space-between; */
@@ -39,6 +39,7 @@
     flex: 1 0 500px;
     box-sizing: border-box;
     margin: 0rem .25em;
+    margin: auto;
   }
   .right-card {
     max-width: 400px;
@@ -53,4 +54,79 @@
   .big{
     justify-content: center;
     align-items: center;
+  }
+  .but{
+    margin-left: 850px;
+  }
+  .card{
+    margin: auto;
+  }
+  .big-card-a {
+    max-width: 900px;
+    display: flex;
+    margin: auto;
+  }
+  .big-card-b {
+    max-width: 700px;
+    display: flex;
+    margin: auto;
+  }
+  .card-Main {
+    max-width: 900px;
+    position: relative;
+}
+mat-grid-tile {
+    background: lightblue;
+  }
+  mat-progress-bar {
+    width: 80%;
+    height:20px ;
+  }
+  .card-Scope{
+    max-width: 400px;
+    margin: auto;
+  }
+  .card-Man {
+    max-width: 1100px;
+    position: relative;
+    margin: auto;
+}
+.but{
+    margin-left: 850px;
+  }
+  .butt{
+    margin-left: 770px;
+  }
+  .buttt{
+    margin-left: 120px;
+  }
+  .example-container {
+    display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    min-width: 900px;
+  }
+  
+  .mat-table {
+    overflow: auto;
+    max-height: 500px;
+  }
+  
+  .mat-column-select {
+    overflow: visible;
+  }
+  h1{
+      text-align: center;
+  }
+  .sty{
+      margin: auto;
+  }
+  .big-card-n {
+    max-width: 900px;
+    display: flex;
+    margin: auto;
+    /* text-align: center; */
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between; */
+    
   }
