--- a/src/app/stepsale/stepsale.component.html
+++ b/src/app/stepsale/stepsale.component.html
@@ -1,14 +1,233 @@
-<mat-card class="example-card">
-  <mat-card-header>
-      <mat-card-title class="header">Select type of project :</mat-card-title>
-      <mat-card-subtitle>Please check the box </mat-card-subtitle>
-  </mat-card-header>
+<h1>
+  Project Pass</h1>
+<br>
+<!-- 11111111111111111111111111111111111111111111111111111111111111111111111111111111 -->
+<mat-horizontal-stepper #stepper>
+  <mat-step [stepControl]="firstFormGroup">
+    <ng-template matStepLabel>เลือก TypeProject</ng-template>
+    <form [formGroup]="firstFormGroup">
+      <mat-card class="card">
+        <mat-card-header>
+          <mat-card-title class="header">Select type of project :</mat-card-title>
+          <mat-card-subtitle>Please check the box </mat-card-subtitle>
+        </mat-card-header>
+        <mat-radio-group class="example-radio-group" [(ngModel)]="proJtype">
+          <mat-radio-button color="primary" class="example-radio-button" *ngFor="let tOP of typeOfProJ" [value]="tOP">
+            {{tOP}}
+          </mat-radio-button>
+        </mat-radio-group>
+        <div class="example-selected-value">Project Type is: {{proJtype}}</div>
+        <button mat-button matStepperNext class="buttonC" mat-raised-button color="primary">Confirm</button>
+      </mat-card>
+    </form>
+  </mat-step>
+  <!--22222222222222222222222222222222222222222222222222222222222222222222222222 -->
+  <mat-step [stepControl]="secondFormGroup">
+    <ng-template matStepLabel>Detail</ng-template>
+    <form [formGroup]="secondFormGroup">
+      <div class="big">
+        <h1>Detail</h1>
+        <mat-card class="big-card-a">
+          <mat-card class="left-card">
+            <form class="example-form">
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Code" aria-label="codes" [matAutocomplete]="auto" [formControl]="codeCtrl" #Code (keyup.enter)="add(Code.value)"
+                  (blur)="add(Code.value);">
+                <mat-autocomplete #auto="matAutocomplete">
+                  <mat-option *ngFor="let state of filteredCodes | async" [value]="state.codes">
+                    <span>{{ state.codes }}</span> |
+                    <small>Population: {{state.detail}}</small>
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+              <br>
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Customer_Name" aria-label="name" [matAutocomplete]="auto" [formControl]="nameCtrl" #Cus_Name
+                  (keyup.enter)="add(Cus_Name.value)" (blur)="add(Cus_Name.value);">
+                <mat-autocomplete #auto="matAutocomplete">
+                  <mat-option *ngFor="let cusN of filteredName | async" [value]="cusN.name">
+                    <span>{{ cusN.name }}</span>
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+              <div class="example-container-a">
+                <mat-form-field>
+                  <input matInput placeholder="Tel" #Tel (keyup.enter)="add(Tel.value)" (blur)="add(Tel.value);">
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Address" #Address (keyup.enter)="add(Address.value)" (blur)="add(Address.value);">
+                </mat-form-field>
+                <div fxFlex></div>
+              </div>
+              <mat-card-actions>
+                <button mat-raised-button color="primary" (click)="onSave(Code.value, Cus_Name.value, Tel.value, Address.value)">Save</button>
+              </mat-card-actions>
+              <br />
+            </form>
+          </mat-card>
+          <mat-card class="right-card">
+            <mat-card-header>
+              <mat-card-title>มีแบบเป็นแบบไหน ?</mat-card-title>
+            </mat-card-header>
+            <mat-radio-group>
+              <mat-radio-button value="1">แบบเป็นเอกสาร</mat-radio-button>
+              <br>
+              <mat-radio-button value="2">แบบเป็นไพล์
+                <button mat-raised-button color="primary" (click)="inputFile.click()">Import file</button> {{ inputFile.value }}
 
-  <mat-radio-group class="example-radio-group" [(ngModel)]="proJtype">
-      <mat-radio-button color="primary" class="example-radio-button" *ngFor="let tOP of typeOfProJ" [value]="tOP" >
-        {{tOP}}
-      </mat-radio-button>
-    </mat-radio-group>
-    <div class="example-selected-value">Project Type is: {{proJtype}}</div>  
-    <button class="buttonC" mat-raised-button color="primary">Confirm</button>
-</mat-card>
+                <input #inputFile type="file" [style.display]="'none'">
+              </mat-radio-button>
+            </mat-radio-group>
+
+          </mat-card>
+          <button mat-button matStepperNext mat-raised-button color="primary">Next</button>
+        </mat-card>
+        <br>
+        <br>
+        <br>
+
+        <div>
+          <button mat-button matStepperPrevious class="but" mat-raised-button color="warn">Back</button>
+        </div>
+
+      </div>
+    </form>
+  </mat-step>
+
+  <!-- 33333333333333333333333333333333333333333333333333333333333333333333333333333333333333 -->
+  <mat-step [stepControl]="thirdFormGroup">
+    <ng-template matStepLabel>Scope</ng-template>
+    <form [formGroup]="thirdFormGroup">
+      <app-sale2></app-sale2>
+    </form>
+  </mat-step>
+  <!-- 44444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444 -->
+  <mat-step [stepControl]="fouthFormGroup">
+    <ng-template matStepLabel>เลือก PM</ng-template>
+    <form [formGroup]="fouthFormGroup">
+      <app-store></app-store>
+      <br>
+      <button mat-button matStepperPrevious class="butt" mat-raised-button color="warn">Back</button>
+      <button mat-button matStepperNext class="buttt" mat-raised-button color="primary">Next</button>
+
+    </form>
+  </mat-step>
+  <!-- 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555 -->
+  <mat-step [stepControl]="fifthFormGroup">
+    <ng-template matStepLabel>View</ng-template>
+    <form [formGroup]="fifthFormGroup">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>ID_Project:</mat-card-title>
+          <mat-list-item>100888</mat-list-item>
+          <mat-card-subtitle>Project Manager(PM):Mr.Somnuek dischauy</mat-card-subtitle>
+        </mat-card-header>
+      </mat-card>
+      <mat-card>
+        <mat-grid-list cols="9" rowHeight="1:1">
+          <mat-grid-tile>
+            <mat-grid-tile-header>Draft</mat-grid-tile-header>
+            <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
+            <mat-grid-tile-footer>100%</mat-grid-tile-footer>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-grid-tile-header>Part 1</mat-grid-tile-header>
+            <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
+            <mat-grid-tile-footer>100%</mat-grid-tile-footer>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-grid-tile-header>Part 2</mat-grid-tile-header>
+            <mat-progress-bar mode="determinate" value="50"></mat-progress-bar>
+            <mat-grid-tile-footer>50%</mat-grid-tile-footer>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-grid-tile-header>Part 3</mat-grid-tile-header>
+            <mat-progress-bar mode="determinate" value="0"></mat-progress-bar>
+            <mat-grid-tile-footer>0%</mat-grid-tile-footer>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-grid-tile-header>Part 4</mat-grid-tile-header>
+            <mat-progress-bar mode="determinate" value="0"></mat-progress-bar>
+            <mat-grid-tile-footer>
+              0%</mat-grid-tile-footer>
+          </mat-grid-tile>
+        </mat-grid-list>
+      </mat-card>
+      <mat-card>
+        <mat-card-title>Material</mat-card-title>
+        <mat-card-actions>
+          <mat-accordion>
+            <mat-expansion-panel>
+
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Material
+                </mat-panel-title>
+                <mat-panel-description>
+                  Material in this project
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <p>Item 1</p>
+              <p>Item 2</p>
+              <p>Item 3</p>
+              <p>Item 4</p>
+              <p>Item 5</p>
+              <p>Item 6</p>
+              <p>Item 7</p>
+              <p>Item 8</p>
+              <p>Item 9</p>
+              <p>Item 10</p>
+              <p>Item 11</p>
+            </mat-expansion-panel>
+          </mat-accordion>
+        </mat-card-actions>
+      </mat-card>
+      <br>
+
+      <mat-card class="card-Man">
+        <mat-card-title>Scope time and Process Work </mat-card-title>
+        <div fxLayout="row">
+          <table style="width: 100%">
+            <tr>
+              <td>
+                <mat-card class="card-Scope">
+                  <mat-card-content>
+                    <h2 class="example-h2">Result</h2>
+                    <div class="center">
+                      <mat-progress-spinner class="example-margin" [color]="color" [value]="value">
+                      </mat-progress-spinner>
+                      {{value}} % </div>
+                  </mat-card-content>
+                </mat-card>
+              </td>
+              <td>
+                <mat-card class="card-Scope">
+                  <mat-card-content>
+                    <h2 class="example-h2">Progress</h2>
+                    <div class="center">
+                      <mat-progress-spinner class="example-margin" [color]="color2" [value]="value2">
+                      </mat-progress-spinner>
+                      {{value2}} % </div>
+                  </mat-card-content>
+                </mat-card>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </mat-card>
+    </form>
+    <br>
+    <button mat-button matStepperPrevious class="butt" mat-raised-button color="warn">Back</button>
+    <button mat-button matStepperNext class="buttt" mat-raised-button color="primary">Finished</button>
+
+  </mat-step>
+<!-- 666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666 -->
+  <mat-step>
+    <ng-template matStepLabel>Done</ng-template>
+    You are now done.
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
+</mat-horizontal-stepper>
