Pm edit Draft suss

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!-- <app-plan4></app-plan4> -->
-<app-sale2>   </app-sale2>
+<!-- <app-sale2>   </app-sale2> -->
 <!-- <app-sale></app-sale> -->
 <!-- <app-sale2></app-sale2> -->
 <!-- <app-stepsale></app-stepsale> -->
+<!-- <app-pmcontrol></app-pmcontrol> -->
 
+ <!-- <app-manager></app-manager> -->
+ <app-edit-draft> </app-edit-draft>
+ <!-- <app-reportdi></app-reportdi> -->
