--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -45,7 +45,7 @@
               (blur)="add(workamount.value);">
             </mat-list-item>
           </mat-list>
-          <button mat-raised-button color="warn" (click)="onSave(workamount.value,index)">Confirm</button>
+          <button mat-raised-button color="warn" (click)="onSave(workamount.value)">Confirm</button>
     </mat-card>
 </mat-card>
 
