--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!-- <app-plan4></app-plan4> -->
-<app-sale2>   </app-sale2>
+<!-- <app-sale2>   </app-sale2> -->
 <!-- <app-sale></app-sale> -->
-<!-- <app-sale2></app-sale2> -->
-<!-- <app-stepsale></app-stepsale> -->
-
+<!-- <app-stepsale></app-stepsale>  -->
+<!-- <app-choose-pm></app-choose-pm> -->
+<!-- <app-pmcontrol></app-pmcontrol> -->
+<!-- <app-store></app-store> -->
+<!-- <app-stores></app-stores> -->
+<!-- <app-storemat></app-storemat> -->
+<app-manager>   </app-manager>
