--- a/src/app/sale-view/sale-view.component.html
+++ b/src/app/sale-view/sale-view.component.html
@@ -1,20 +1,18 @@
-<p>
+
     <mat-card>
         <mat-card-header>
             <mat-card-title>ID_Project:</mat-card-title><mat-list-item>100888</mat-list-item> 
             <mat-card-subtitle>Project Manager(PM):Mr.Somnuek dischauy</mat-card-subtitle>
           </mat-card-header>
     </mat-card>
-    <mat-card>
-        
-      <mat-grid-list cols="9" rowHeight="1:1">
-        <mat-grid-tile><mat-grid-tile-header>Draft</mat-grid-tile-header> <mat-progress-bar mode="determinate" value="100"></mat-progress-bar><mat-grid-tile-footer>100%</mat-grid-tile-footer></mat-grid-tile>
-        <mat-grid-tile><mat-grid-tile-header>Part 1</mat-grid-tile-header><mat-progress-bar mode="determinate" value="100"></mat-progress-bar><mat-grid-tile-footer>100%</mat-grid-tile-footer></mat-grid-tile>
-        <mat-grid-tile><mat-grid-tile-header>Part 2</mat-grid-tile-header><mat-progress-bar mode="determinate" value="50"></mat-progress-bar><mat-grid-tile-footer>50%</mat-grid-tile-footer></mat-grid-tile>
-        <mat-grid-tile><mat-grid-tile-header>Part 3</mat-grid-tile-header><mat-progress-bar mode="determinate" value="0"></mat-progress-bar><mat-grid-tile-footer>0%</mat-grid-tile-footer></mat-grid-tile>
-        <mat-grid-tile><mat-grid-tile-header>Part 4</mat-grid-tile-header><mat-progress-bar mode="determinate" value="0"></mat-progress-bar><mat-grid-tile-footer>
+    <mat-card >
+      <mat-grid-list cols="9" rowHeight="1:1" >
+          <mat-grid-tile><mat-grid-tile-header class="ba">Draft</mat-grid-tile-header> <mat-progress-bar mode="determinate" value="100"></mat-progress-bar><mat-grid-tile-footer>100%</mat-grid-tile-footer></mat-grid-tile>
+          <mat-grid-tile><mat-grid-tile-header class="ba">Part 1</mat-grid-tile-header><mat-progress-bar mode="determinate" value="100"></mat-progress-bar><mat-grid-tile-footer>100%</mat-grid-tile-footer></mat-grid-tile>
+          <mat-grid-tile><mat-grid-tile-header class="ba">Part 2</mat-grid-tile-header><mat-progress-bar mode="determinate" value="50"></mat-progress-bar><mat-grid-tile-footer>50%</mat-grid-tile-footer></mat-grid-tile>
+          <mat-grid-tile><mat-grid-tile-header class="ba">Part 3</mat-grid-tile-header><mat-progress-bar mode="determinate" value="0"></mat-progress-bar><mat-grid-tile-footer>0%</mat-grid-tile-footer></mat-grid-tile>
+          <mat-grid-tile><mat-grid-tile-header class="ba">Part 4</mat-grid-tile-header><mat-progress-bar mode="determinate" value="0"></mat-progress-bar><mat-grid-tile-footer>
           0%</mat-grid-tile-footer></mat-grid-tile>
-        
       </mat-grid-list>
       </mat-card>
       <mat-card>
@@ -52,24 +50,3 @@
               </mat-accordion>
         </mat-card-actions>
       </mat-card>
-      <mat-card  >
-          <mat-card-title>Scope time and Process Work  </mat-card-title>
-          <mat-grid-list cols="2" rowHeight="2:1">
-              <mat-grid-tile><mat-grid-tile-header> <mat-form-field>
-                  <textarea matInput placeholder="Start"></textarea>
-                </mat-form-field><p> To </p><mat-form-field>
-                    <textarea matInput placeholder="End"></textarea>
-                  </mat-form-field></mat-grid-tile-header>
-                  <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
-              <mat-grid-tile-footer>40%</mat-grid-tile-footer></mat-grid-tile>
-              
-          <mat-grid-tile><mat-grid-tile-header>Process Work!</mat-grid-tile-header>
-            <mat-progress-bar mode="determinate" value="53"></mat-progress-bar>
-        <mat-grid-tile-footer>53%</mat-grid-tile-footer></mat-grid-tile>
-              
-            </mat-grid-list>
-      </mat-card>
-      
-    
-    
-    </p>
