--- a/src/app/sale2/sale2.component.html
+++ b/src/app/sale2/sale2.component.html
@@ -29,7 +29,7 @@
                     
                     </form>
       </mat-card>
-  <button mat-raised-button color="primary" >Next</button>
+  <button mat-button matStepperNext  mat-raised-button color="primary" >Next</button>
   </mat-card>
   
   </div>
