--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -30,3 +30,12 @@
     position: absolute;
     top: 1%;
 }
+.time-card{
+    height: 200px;
+    width: 800px;
+    right: 40% ;
+    left: 30%;
+    background-color: slategray;
+    position: absolute;
+    top: 60%;
+}
