--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -45,8 +45,21 @@
               (blur)="add(workamount.value);">
             </mat-list-item>
           </mat-list>
+          <mat-progress-bar mode="determinate" value="40"></mat-progress-bar> <br>
           <button mat-raised-button color="warn" (click)="onSave(workamount.value,index)">Confirm</button>
     </mat-card>
+</mat-card>
+<br>
+<br>
+<mat-card class="time-card">
+  <mat-card-header>
+    
+    <mat-card-title>Scope time</mat-card-title>
+  </mat-card-header>
+ 
+  
+  
+  <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
 </mat-card>
 
 </div>
