--- a/src/app/storemat/storeEdit.html
+++ b/src/app/storemat/storeEdit.html
@@ -1,15 +1,8 @@
-<h1 mat-dialog-title>Favorite Animal</h1>
+<h1 mat-dialog-title>เพิ่มของในสต้อก</h1>
 <div mat-dialog-content>
-  My favorite animal is:
-  <ul>
-    <li>
-      <span *ngIf="data.animal === 'panda'">&#10003;</span> Panda
-    </li>
-    <li>
-      <span *ngIf="data.animal === 'unicorn'">&#10003;</span> Unicorn
-    </li>
-    <li>
-      <span *ngIf="data.animal === 'lion'">&#10003;</span> Lion
-    </li>
-  </ul>
+ <h3>ID_Mat: </h3>
+ <h3>Name: </h3>
+ <h3>Amount: </h3>
+ <h3>Stock: </h3>
+ <button  mat-raised-button color="primary">Confirm</button>
 </div>
