--- a/src/app/storemat/storemat.component.css
+++ b/src/app/storemat/storemat.component.css
@@ -9,3 +9,10 @@
   h1{
       text-align: center;
   }
+  .example-container {
+    display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    min-width: 100px;
+    overflow: auto;
+  }
